# CppProjektWithCICD

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  README.md.in
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: main.cpp
bench/: bench_math.cpp
docs/: Doxyfile.in
include/project/: math.hpp
src/: math.cpp
tests/: test_main.cpp  test_math.cpp
